src/other/mico-2.3.12/test/idl/error/expected-stderr-case12.idl
case12.idl:9: union 'U' has duplicate labels
